# fork_edit

./: Cargo.toml  build.rs  rust-toolchain.toml  rustfmt.toml
.cargo/: release.toml  release.toml.md
.github/custom_instructions/: general.custom_instructions.md
.github/prompts/edit/: edit_file_description.prompt.md
doc/: 01_解析の方針.md
